Generate some testng classes too